# chat-app-in-terminal-by-python

./: README.md  pyproject.toml
src/: main.py
src/lib/cohere_lib/: chat.py  chat_history.py  cohere_logic.py
